--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
         <div id="suggested"></div>
       </div>
     </div>
-    <script src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleNav.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/fec-imdb/app/bundleMiddle.js"></script>
-    <script src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleSuggested.js"></script>
+    <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleNav.js"></script>
+    <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-imdb/app/bundleMiddle.js"></script>
+    <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleSuggested.js"></script>
   </body>
 </html>
