Add file for mongo-seed

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>fmdb details</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/mccullochfmdb/stylesMain.css">
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/fec-imdb/app/stylesMiddle.css">
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/stylesNav.css">
     <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/stylesSuggested.css">
@@ -15,16 +16,33 @@
       #wrapper {
         display: flex;
       }
+
+      #main {
+        margin-bottom:15px;
+      }
+
+      #middle {
+        margin-top: 15px;
+      }
+      
+      #midWrapper {
+        display: flex;
+        flex-direction: column;
+      }
     </style>
   </head>
   <body>
     <div id="container">
       <div id="nav"></div>
       <div id="wrapper">
-        <div id="middle"></div>
+        <div id="midWrapper">
+          <div id="main"></div>
+          <div id="middle"></div>
+        </div>
         <div id="suggested"></div>
       </div>
     </div>
+    <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/mccullochfmdb/bundleMain.js"></script>
     <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleNav.js"></script>
     <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-imdb/app/bundleMiddle.js"></script>
     <script type="application/javascript" src="https://s3-us-west-1.amazonaws.com/fec-fmdb/app/bundleSuggested.js"></script>
